// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopChannels when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_default_channel_group"
    >
      Top Channels
    </a>
  </div>
  <figure
    id="chart_session_channel_group"
  >
    <div
      class="data chart__bar-chart"
    >
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Organic Search
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          51.6%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 52%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Direct
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          43.8%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 44%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Paid Search
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.6%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Email
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.5%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 2%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Unassigned
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          1.2%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 1%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Paid Other
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Organic Social
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
      <div
        class="chart__bar-chart__item"
      >
        <div
          class="chart__bar-chart__item__label"
        >
          Paid Social
        </div>
        <div
          class="chart__bar-chart__item__value"
        >
          0.1%
        </div>
        <div
          class="chart__bar-chart__item__bar"
          style="width: 0%;"
        />
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`TopChannels when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_default_channel_group"
    >
      Top Channels
    </a>
  </div>
  <figure
    id="chart_session_channel_group"
  >
    <div
      class="data chart__bar-chart"
    />
  </figure>
</DocumentFragment>
`;

exports[`TopChannels when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="chart__title"
  >
    <a
      href="/definitions#dimension_default_channel_group"
    >
      Top Channels
    </a>
  </div>
  <figure
    id="chart_session_channel_group"
  >
    <div
      class="data chart__bar-chart"
    />
  </figure>
</DocumentFragment>
`;
